[profile.release]
debug = true

[package]
name = "threedui"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
console_log = "0.2"
